force-app/main/default/objects/Special_Instruction__c/Special_Instruction__c.object-meta.xml
<CustomObject>
    <description>Special billing instructions linked to Quotes. Created automatically when billing conditions require Finance attention: Billing Mode changes, Different Invoice Currency, or Security Deposit Required. Each instruction is independently tracked and acknowledged by Finance.</description>
    <label>Special Instruction</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>SI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Instructions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>