force-app/main/default/objects/Special_Instruction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized Account reference for dashboard queries and filtering.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Special Instructions</relationshipLabel>
    <relationshipName>Special_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>