force-app/main/default/objects/Special_Instruction__c/fields/Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Finance user who acknowledged or rejected this instruction.</description>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acknowledged_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>