force-app/main/default/objects/Special_Instruction__c/fields/Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Date__c</fullName>
    <description>Timestamp when Finance acknowledged or rejected this instruction.</description>
    <label>Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>