force-app/main/default/objects/Special_Instruction__c/fields/Company_Names__c.field-meta.xml
<CustomField>
    <fullName>Company_Names__c</fullName>
    <description>Comma-separated DE company (entity) names this T&amp;C applies to. Leave blank to match all companies.</description>
    <label>Company Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>