force-app/main/default/objects/Special_Instruction__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Operating country denormalized from Quote site for dashboard filtering.</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>