force-app/main/default/objects/Special_Instruction__c/fields/Customer_Names__c.field-meta.xml
<CustomField>
    <fullName>Customer_Names__c</fullName>
    <description>Comma-separated customer account names this T&amp;C applies to. Leave blank to match all customers.</description>
    <label>Customer Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>