force-app/main/default/objects/Special_Instruction__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <description>Finance team response, conditions, or clarifications.</description>
    <label>Finance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>