force-app/main/default/objects/Special_Instruction__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Quote that this special instruction relates to.</description>
    <inlineHelpText>The quote this instruction is linked to.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Special Instructions</relationshipLabel>
    <relationshipName>Special_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>