force-app/main/default/objects/Special_Instruction__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Notes explaining how a Special Instruction was resolved. Populated automatically for Auto-Resolved credit limit items, or manually by Finance.</description>
    <inlineHelpText>How this instruction was resolved.</inlineHelpText>
    <label>Resolution Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>