force-app/main/default/objects/Special_Instruction__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Display order of this T&amp;C template in the quote email dropdown. Lower numbers appear first.</description>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>