force-app/main/default/objects/Special_Instruction__c/fields/SI_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SI_Account_Name__c</fullName>
    <description>Text formula = Account name, so it renders as a direct field in Classic email templates (used by DE_Finance_Review_Notification).</description>
    <formula>Account__r.Name</formula>
    <label>SI Account Name</label>
    <type>Text</type>
</CustomField>