force-app/main/default/objects/Special_Instruction__c/fields/SI_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>SI_Quote_Number__c</fullName>
    <description>Text formula = related Quote number, so it renders as a direct field in Classic email templates (used by DE_Finance_Review_Notification).</description>
    <formula>Quote__r.Quote_Number__c</formula>
    <label>SI Quote Number</label>
    <type>Text</type>
</CustomField>