force-app/main/default/objects/Special_Instruction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status. Billing: Pending = awaiting Finance action, Acknowledged = Finance reviewed, Rejected = Finance declined. T&amp;C: New = submitted for approval, Approved = active, Expired = no longer active.</description>
    <inlineHelpText>Current status of this instruction.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Auto-Resolved</fullName>
                <isActive>false</isActive>
                <label>Auto-Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>