force-app/main/default/objects/Special_Instruction__c/fields/Subscription_Management__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Management__c</fullName>
    <description>The quote type this T&amp;C template applies to: Creation, Change Order, or Renewal.</description>
    <label>Subscription Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation</fullName>
                <default>true</default>
                <label>Creation</label>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>