force-app/main/default/objects/Special_Instruction__c/fields/TandC_Name__c.field-meta.xml
<CustomField>
    <fullName>TandC_Name__c</fullName>
    <description>Display name for the Terms and Conditions template.</description>
    <label>T&amp;C Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>