force-app/main/default/objects/Special_Instruction__c/fields/Terms_Text__c.field-meta.xml
<CustomField>
    <fullName>Terms_Text__c</fullName>
    <description>HTML content for this Terms and Conditions template, rendered in the quote email.</description>
    <label>Terms Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>