force-app/main/default/objects/Special_Instruction__c/fields/Terms_Text_ja__c.field-meta.xml
<CustomField>
    <fullName>Terms_Text_ja__c</fullName>
    <description>Japanese (ja) HTML translation of Terms_Text__c, rendered on Japanese-language quote PDFs. Blank falls back to English Terms_Text__c.</description>
    <label>Terms Text (Japanese)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>