force-app/main/default/objects/Special_Instruction__c/fields/Terms_Text_ko__c.field-meta.xml
<CustomField>
    <fullName>Terms_Text_ko__c</fullName>
    <description>Korean (ko) HTML translation of Terms_Text__c, rendered on Korean-language quote PDFs. Blank falls back to English Terms_Text__c.</description>
    <label>Terms Text (Korean)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>