force-app/main/default/objects/Special_Instruction__c/fields/Terms_Text_zh_CN__c.field-meta.xml
<CustomField>
    <fullName>Terms_Text_zh_CN__c</fullName>
    <description>Simplified Chinese (zh_CN) HTML translation of Terms_Text__c, rendered on Chinese-language quote PDFs. Blank falls back to English Terms_Text__c.</description>
    <label>Terms Text (Chinese)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>