force-app/main/default/objects/Special_Instruction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classification of the special instruction.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Mode Change</fullName>
            </value>
            <value>
                <fullName>Different Invoice Currency</fullName>
            </value>
            <value>
                <fullName>Security Deposit Required</fullName>
            </value>
            <value>
                <fullName>Credit Limit</fullName>
            </value>
            <value>
                <fullName>T&amp;C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>