force-app/main/default/objects/Special_Instruction__c/recordTypes/Special_Billing_Instruction.recordType-meta.xml
<RecordType>
    <fullName>Special_Billing_Instruction</fullName>
    <active>true</active>
    <description>Special Billing Instructions created automatically when billing conditions require Finance attention: Billing Mode changes, Different Invoice Currency, or Security Deposit Required.</description>
    <label>Special Billing Instruction</label>
</RecordType>