force-app/main/default/objects/Special_Instruction__c/recordTypes/Terms_and_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Terms_and_Conditions</fullName>
    <active>true</active>
    <description>Terms and Conditions templates used in Quote emails. Submitted by System Admins and approved before use.</description>
    <label>Terms and Conditions</label>
</RecordType>