force-app/main/default/objects/Special_Instruction__c/listViews/All_Special_Instructions.listView-meta.xml
<ListView>
    <fullName>All_Special_Instructions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Quote__c</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TandC_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Special Instructions</label>
</ListView>