force-app/main/default/objects/Special_Instruction__c/listViews/Credit_Limit_Exceed.listView-meta.xml
<ListView>
    <fullName>Credit_Limit_Exceed</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Quote__c</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Credit Limit</value>
    </filters>
    <label>Credit Limit Exceed review</label>
</ListView>