force-app/main/default/objects/Special_Instruction__c/listViews/DE_Finance_All_Special_Instruction.listView-meta.xml
<ListView>
    <fullName>DE_Finance_All_Special_Instruction</fullName>
    <filterScope>Queue</filterScope>
    <label>DE Finance All</label>
    <queue>DE_Finance_All</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>