force-app/main/default/objects/Special_Instruction__c/listViews/DE_TH_Country_Finance_Special_Instruction.listView-meta.xml
<ListView>
    <fullName>DE_TH_Country_Finance_Special_Instruction</fullName>
    <filterScope>Queue</filterScope>
    <label>DE TH Country Finance</label>
    <queue>DE_TH_Country_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>