force-app/main/default/objects/Special_Instruction__c/listViews/My_Special_Instructions.listView-meta.xml
<ListView>
    <fullName>My_Special_Instructions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Quote__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Special Instructions</label>
</ListView>