force-app/main/default/objects/Special_Instruction__c/listViews/Pending_Special_Instructions.listView-meta.xml
<ListView>
    <fullName>Pending_Special_Instructions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Quote__c</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Instructions</label>
</ListView>